# corporate-actions-agent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  run.sh
.cache/llm/: 01_energetica_vale_tiete_dividendo.0.aa1ccb6a7941df73acd26c8b.json  01_energetica_vale_tiete_dividendo.1.6d3bd6b68b194b4b95131d2d.json  01_energetica_vale_tiete_dividendo.4.c85f2b12dd7f9b3de77ef273.json  (+19 more)
backend/: README.md  pyproject.toml
backend/app/: __init__.py  cli.py
backend/app/agent/: __init__.py  assembly.py  confidence.py  crossmodal.py  graph.py  nodes.py  routing.py  runner.py  selfconsistency.py  state.py
backend/app/api/: __init__.py  deps.py  main.py  routes.py  schemas.py
backend/app/config/: __init__.py  settings.py
backend/app/domain/: __init__.py  enums.py  golden.py  parsing.py  schemas.py
backend/app/extraction/: __init__.py  ocr.py  pdf.py  provenance.py
backend/app/guardrails/: __init__.py  runner.py  tools.py
backend/app/llm/: __init__.py  base.py  cache.py  factory.py  fallback.py  gemini.py  prompts.py  stub.py
backend/app/output/: __init__.py  pdf.py  writer.py
backend/app/persistence/: __init__.py  db.py  models.py  repository.py
backend/app/validation/: __init__.py  coherence.py  dq.py  golden_match.py  groundedness.py  identifiers.py
backend/tests/: conftest.py  test_p0_foundations.py  test_p1_extraction.py  test_p1b_fallback.py  test_p1c_crossmodal.py  test_p2_pipeline.py  test_p3_guardrails.py  test_p5_api.py  test_p6_projects.py
enunciado/: Enunciado - Case AI Dev.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
golden_records/: golden records.csv
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml
outputs/: exceptions_report.json  exceptions_report.md  run_summary.json
(+28 files in other folders)
